_rendered/apps/adguard-sync/service-adguard-sync.yaml
# Source: adguard-sync/charts/adguard-sync/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard-sync
  labels:
    helm.sh/chart: adguard-sync-4.6.0
    
    app.kubernetes.io/name: adguard-sync
    app.kubernetes.io/instance: adguard-sync
    app.kubernetes.io/version: "v0.9.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: default-service-endpoint
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: adguard-sync
    app.kubernetes.io/instance: adguard-sync
