_rendered/apps/adguard-sync/cilium_io-ciliumnetworkpolicy-adguard-sync-preset-cnp.yaml
# Source: adguard-sync/charts/adguard-sync/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: adguard-sync-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: adguard-home
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - 
      toCIDR:
      - 10.0.0.5/32
      toPorts:
      - ports:
        - port: "80"
          protocol: TCP
